--- a/kubernetes/cluster/flux-bootstrap/persistance.yaml
+++ b/kubernetes/cluster/flux-bootstrap/persistance.yaml
@@ -2,5 +2,6 @@ apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: local-storage
-provisioner: kubernetes.io/no-provisioner
+provisioner: kubernetes.io/local
+reclaimPolicy: retain
 volumeBindingMode: WaitForFirstConsumer
