--- a/kubernetes/cluster/apps/vault/helm-release.yaml
+++ b/kubernetes/cluster/apps/vault/helm-release.yaml
@@ -44,3 +44,7 @@ spec:
     ui:
       enabled: true
       serviceType: LoadBalancer
+      loadBalancerIP: 192.168.0.155
+      loadBalancerSourceRanges:
+        - 192.168.0.0/16
+        - 10.0.0.0/8
