--- a/kubernetes/cluster/apps/vault/helm-release.yaml
+++ b/kubernetes/cluster/apps/vault/helm-release.yaml
@@ -34,17 +34,14 @@ spec:
           }
       service:
         enabled: true
-
+        type: ClusterIP
+        externalIPs:
+          - "192.168.0.155"
       dataStorage:
         enabled: true
         size: 10Gi
         storageClass: null
         accessMode: ReadWriteOnce
-    
     ui:
       enabled: true
-      serviceType: LoadBalancer
-      loadBalancerIP: 192.168.0.155
-      loadBalancerSourceRanges:
-        - 192.168.0.0/16
-        - 10.0.0.0/8
+      serviceType: ClusterIP
