--- a/kubernetes/cluster/flux-bootstrap/secrets.yaml
+++ b/kubernetes/cluster/flux-bootstrap/secrets.yaml
@@ -2,11 +2,11 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: vault
+  name: secrets
   namespace: flux-system
 spec:
   interval: 10m0s
-  path: ./kubernetes/cluster/apps/vault
+  path: ./kubernetes/cluster/apps/secrets
   prune: true
   sourceRef:
     kind: GitRepository
