Added additional permissions to torrent-app sa

--- a/kubernetes/cluster/apps/secrets/helm-release.yaml
+++ b/kubernetes/cluster/apps/secrets/helm-release.yaml
@@ -37,9 +37,8 @@ spec:
         type: ClusterIP
       dataStorage:
         enabled: true
-        size: 10Gi
-        storageClass: null
-        accessMode: ReadWriteOnce
+        type: hostPath
+        hostPath: /var/local/kubernetes/secrets/vault
     ui:
       enabled: true
       serviceType: ClusterIP
