Added vault service account

--- a/kubernetes/cluster/apps/secrets/helm-release.yaml
+++ b/kubernetes/cluster/apps/secrets/helm-release.yaml
@@ -19,6 +19,9 @@ spec:
         namespace: flux-system
       interval: 5m
   values:
+    serviceAccount:
+      create: true
+      name: vault-auth
     server:
       standalone:
         enabled: true
