--- a/kubernetes/cluster/apps/secrets/helm-release.yaml
+++ b/kubernetes/cluster/apps/secrets/helm-release.yaml
@@ -10,7 +10,7 @@ spec:
     force: true
   chart:
     spec:
-      # renovate: registryUrl=https://anthonytam.github.io/Chia-Forks-Docker/helm
+      # renovate: registryUrl=https://helm.releases.hashicorp.com/
       chart: vault
       version: 0.17.1
       sourceRef:
