Added runas security context

--- a/kubernetes/cluster/apps/media/qbittorrent/helm-release.yaml
+++ b/kubernetes/cluster/apps/media/qbittorrent/helm-release.yaml
@@ -86,6 +86,8 @@ spec:
             add:
               - NET_ADMIN
               - SYS_MODULE
+          runAsGroup: 0
+          runAsUser: 0
         env:
           FIREWALL: 'on'
         configFile: |-
