Added exlusion to pod cidr range

--- a/kubernetes/cluster/apps/media/qbittorrent/helm-release.yaml
+++ b/kubernetes/cluster/apps/media/qbittorrent/helm-release.yaml
@@ -91,6 +91,7 @@ spec:
           runAsUser: 0
         env:
           FIREWALL: 'on'
+          ROUTE: '10.254.0.0/16'
         configFile: |-
           client
           dev tun
