--- a/kubernetes/cluster/apps/media/qbittorrent/helm-release.yaml
+++ b/kubernetes/cluster/apps/media/qbittorrent/helm-release.yaml
@@ -94,7 +94,7 @@ spec:
           runAsUser: 0
         env:
           FIREWALL: 'on'
-          ROUTE: '10.254.0.0/16,192.168.0.0/24'
+          ROUTE: '192.168.0.0/24'
         configFile: |-
           client
           dev tun
