--- a/kubernetes/cluster/apps/media/qbittorrent/helm-release.yaml
+++ b/kubernetes/cluster/apps/media/qbittorrent/helm-release.yaml
@@ -94,7 +94,9 @@ spec:
           runAsUser: 0
         env:
           FIREWALL: 'on'
-          ROUTE: '192.168.0.0/24'
+          ROUTE_1: "10.254.0.0/16"
+          ROUTE_2: "10.96.0.0/12"
+          ROUTE_3: "192.168.0.0/24"
         configFile: |-
           client
           dev tun
