--- a/kubernetes/cluster/apps/media/qbittorrent/helm-release.yaml
+++ b/kubernetes/cluster/apps/media/qbittorrent/helm-release.yaml
@@ -31,9 +31,14 @@ spec:
     serviceAccount:
       create: true
       name: torrent-app
-    #probes:
-    #  startup:
-    #    enabled: false
+    # TODO: Fix me
+    probes:
+      startup:
+        enabled: false
+      readiness:
+        enabled: false
+      liveness:
+        enabled: false
     image:
       repository: ghcr.io/k8s-at-home/qbittorrent
       tag: v4.3.7
@@ -94,9 +99,6 @@ spec:
           runAsUser: 0
         env:
           FIREWALL: 'on'
-          ROUTE_1: "10.254.0.0/16"
-          ROUTE_2: "10.96.0.0/12"
-          ROUTE_3: "192.168.0.0/24"
         configFile: |-
           client
           dev tun
