--- a/kubernetes/cluster/apps/media/jackett/helm-release.yaml
+++ b/kubernetes/cluster/apps/media/jackett/helm-release.yaml
@@ -11,7 +11,7 @@ spec:
   chart:
     spec:
       # renovate: registryUrl=https://k8s-at-home.com/charts/
-      chart: qbittorrent
+      chart: jackett
       version: 11.2.0
       sourceRef:
         kind: HelmRepository
