--- a/kubernetes/cluster/apps/vpn/helm-release.yaml
+++ b/kubernetes/cluster/apps/vpn/helm-release.yaml
@@ -2,7 +2,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: surfshark
+  name: vpn-gateway
   namespace: vpn
 spec:
   interval: 5m
