--- a/kubernetes/cluster/apps/vpn-gateway/helm-release.yaml
+++ b/kubernetes/cluster/apps/vpn-gateway/helm-release.yaml
@@ -2,8 +2,8 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: vpn-gateway
-  namespace: vpn
+  name: surfshark
+  namespace: vpn-gateway
 spec:
   interval: 5m
   upgrade:
