--- a/kubernetes/cluster/flux-bootstrap/vpn-gateway.yaml
+++ b/kubernetes/cluster/flux-bootstrap/vpn-gateway.yaml
@@ -2,11 +2,11 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: vpn
+  name: vpn-gateway
   namespace: flux-system
 spec:
   interval: 10m0s
-  path: ./kubernetes/cluster/apps/vpn
+  path: ./kubernetes/cluster/apps/vpn-gateway
   prune: true
   sourceRef:
     kind: GitRepository
