Changesd routed namespace name

--- a/kubernetes/cluster/apps/vpn-gateway/helm-release.yaml
+++ b/kubernetes/cluster/apps/vpn-gateway/helm-release.yaml
@@ -20,7 +20,7 @@ spec:
       interval: 5m
   values:
     routed_namespaces:
-    - vpn
+      - vpn-gateway
     podAnnotations:
       vault.hashicorp.com/agent-inject: 'true'
       vault.hashicorp.com/role: 'vpn-app'
