--- a/kubernetes/cluster/apps/media/qbittorrent/helm-release.yaml
+++ b/kubernetes/cluster/apps/media/qbittorrent/helm-release.yaml
@@ -99,7 +99,8 @@ spec:
           runAsUser: 0
         env:
           FIREWALL: 'on'
-          ROUTE: '10.0.0.0/8'
+          ROUTE_1: '10.254.0.0/16'
+          ROUTE_2: '10.96.0.0/12'
         configFile: |-
           client
           dev tun
