--- a/kubernetes/cluster/apps/vpn-gateway/helm-release.yaml
+++ b/kubernetes/cluster/apps/vpn-gateway/helm-release.yaml
@@ -157,7 +157,7 @@ spec:
       VPN_BLOCK_OTHER_TRAFFIC: true
       VPN_TRAFFIC_PORT: 1194
       NOT_ROUTED_TO_GATEWAY_CIDRS: "172.16.0.0/12 192.168.0.0/24"
-      VPN_LOCAL_CIDRS: "172.16.0.0/12 192.168.0.0/24"
+      VPN_LOCAL_CIDRS: "172.16.0.0/12 192.168.0.0/24 10.0.0.0/8"
     webhook:
       image:
         repository: ghcr.io/k8s-at-home/gateway-admision-controller
