--- a/kubernetes/cluster/flux-bootstrap/downloads.yaml
+++ b/kubernetes/cluster/flux-bootstrap/downloads.yaml
@@ -2,11 +2,11 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: media-management
+  name: downloads
   namespace: flux-system
 spec:
   interval: 10m0s
-  path: ./kubernetes/cluster/apps/media-management
+  path: ./kubernetes/cluster/apps/downloads
   prune: true
   sourceRef:
     kind: GitRepository
