--- a/kubernetes/cluster/apps/media-management/sonarr/helm-release.yaml
+++ b/kubernetes/cluster/apps/media-management/sonarr/helm-release.yaml
@@ -3,7 +3,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: sonarr
-  namespace: media
+  namespace: media-management
 spec:
   interval: 5m
   upgrade:
