--- a/kubernetes/cluster/apps/database/helm-release.yaml
+++ b/kubernetes/cluster/apps/database/helm-release.yaml
@@ -28,3 +28,6 @@ spec:
     persistence:
       config:
         enabled: true
+        type: hostPath
+        hostPath: /var/local/kubernetes/database/mariadb/config
+        mountPath: /config
