--- a/kubernetes/cluster/apps/database/percistance.yaml
+++ b/kubernetes/cluster/apps/database/percistance.yaml
@@ -13,6 +13,14 @@ spec:
   volumeMode: Filesystem
   local:
     path: /var/local/kubernetes/database/mariadb
+  nodeAffinity:
+    required:
+      nodeSelectorTerms:
+      - matchExpressions:
+        - key: kubernetes.io/hostname
+          operator: In
+          values:
+          - docker01.homeland.lan
 ---
 apiVersion: v1 
 kind: PersistentVolumeClaim
