Added namespace to pvc

--- a/kubernetes/cluster/apps/database/percistance.yaml
+++ b/kubernetes/cluster/apps/database/percistance.yaml
@@ -26,6 +26,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata: 
   name: database-mariadb-pvc 
+  namespace: database
 spec: 
   accessModes: 
     - ReadWriteOnce
