--- a/kubernetes/cluster/flux-bootstrap/cert-manager.yaml
+++ b/kubernetes/cluster/flux-bootstrap/cert-manager.yaml
@@ -2,11 +2,11 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: crds
+  name: cert-manager
   namespace: flux-system
 spec:
   interval: 10m0s
-  path: ./kubernetes/cluster/crds
+  path: ./kubernetes/cluster/apps/cert-manager
   prune: true
   sourceRef:
     kind: GitRepository
