--- a/kubernetes/cluster/apps/downloads/jackett/helm-release.yaml
+++ b/kubernetes/cluster/apps/downloads/jackett/helm-release.yaml
@@ -22,6 +22,8 @@ spec:
     serviceAccount:
       create: true
       name: jackett-app
+    podAnnotations:
+      setGateway: "true"
     image:
       repository: ghcr.io/k8s-at-home/jackett
       tag: v0.20.53
