--- a/kubernetes/cluster/apps/downloads/qbittorrent/helm-release.yaml
+++ b/kubernetes/cluster/apps/downloads/qbittorrent/helm-release.yaml
@@ -22,6 +22,8 @@ spec:
     serviceAccount:
       create: true
       name: torrent-app
+    podAnnotations:
+      setGateway: "true"
     image:
       repository: ghcr.io/k8s-at-home/qbittorrent
       tag: v4.3.7
