--- a/kubernetes/cluster/apps/vpn-gateway/helm-release.yaml
+++ b/kubernetes/cluster/apps/vpn-gateway/helm-release.yaml
@@ -34,19 +34,13 @@ spec:
       tag: latest
     DNS: 172.16.0.1
     routed_namespaces:
-      - downloads
+      - test-namespace
     settings:
       VPN_INTERFACE: tun0
       VPN_BLOCK_OTHER_TRAFFIC: true
       VPN_TRAFFIC_PORT: 1194
-      NOT_ROUTED_TO_GATEWAY_CIDRS: "172.16.0.0/12 192.168.0.0/24"
-      VPN_LOCAL_CIDRS: "172.16.0.0/12 192.168.0.0/24 10.0.0.0/8"
-    webhook:
-      image:
-        repository: ghcr.io/k8s-at-home/gateway-admision-controller
-        tag: latest
-      namespaceSelector:
-        label: "vpn-routed-gateway"
+      NOT_ROUTED_TO_GATEWAY_CIDRS: "172.16.0.0/24 192.168.0.0/24"
+      VPN_LOCAL_CIDRS: "172.16.0.0/24 192.168.0.0/24 10.0.0.0/8"
     addons:
       vpn:
         enabled: true
