--- a/kubernetes/cluster/apps/vpn-gateway/helm-release.yaml
+++ b/kubernetes/cluster/apps/vpn-gateway/helm-release.yaml
@@ -4,6 +4,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: vpn-gateway
+  namespace: vpn-gateway
   labels:
 spec:
   interval: 5m
