--- a/kubernetes/cluster/apps/vpn-gateway/helm-release.yaml
+++ b/kubernetes/cluster/apps/vpn-gateway/helm-release.yaml
@@ -15,7 +15,7 @@ spec:
       version: 2.0.0
       sourceRef:
         kind: HelmRepository
-        name: k8s-at-home-charts
+        name: k8s-at-home
         namespace: flux-system
       interval: 5m
 
