--- a/kubernetes/cluster/apps/vpn-gateway/helm-release.yaml
+++ b/kubernetes/cluster/apps/vpn-gateway/helm-release.yaml
@@ -7,11 +7,13 @@ metadata:
   namespace: vpn-gateway
 spec:
   interval: 5m
+  upgrade:
+    force: true
   chart:
     spec:
       # renovate: registryUrl=https://k8s-at-home.com/charts/
       chart: pod-gateway
-      version: 2.0.0
+      version: 5.1.0
       sourceRef:
         kind: HelmRepository
         name: k8s-at-home
