--- a/kubernetes/cluster/apps/vpn-gateway/helm-release.yaml
+++ b/kubernetes/cluster/apps/vpn-gateway/helm-release.yaml
@@ -22,5 +22,11 @@ spec:
 
   # See https://github.com/k8s-at-home/charts/blob/master/charts/pod-gateway/values.yaml
   values:
+    settings:
+      VPN_INTERFACE: tun0
+      VPN_BLOCK_OTHER_TRAFFIC: true
+      VPN_TRAFFIC_PORT: 1194
+      NOT_ROUTED_TO_GATEWAY_CIDRS: "172.16.0.0/24 192.168.0.0/16"
+      VPN_LOCAL_CIDRS: "172.16.0.0/24 192.168.0.0/16 10.0.0.0/8"
     routed_namespaces:
     - vpn
