Disabled vpn traffic routing killswitch

--- a/kubernetes/cluster/apps/vpn-gateway/helm-release.yaml
+++ b/kubernetes/cluster/apps/vpn-gateway/helm-release.yaml
@@ -24,7 +24,7 @@ spec:
   values:
     settings:
       VPN_INTERFACE: tun0
-      VPN_BLOCK_OTHER_TRAFFIC: true
+      VPN_BLOCK_OTHER_TRAFFIC: false
       VPN_TRAFFIC_PORT: 1194
       NOT_ROUTED_TO_GATEWAY_CIDRS: "10.0.0.0/8 192.168.0.0/16"
       VPN_LOCAL_CIDRS: "192.168.0.0/16 172.16.0.0/24 10.0.0.0/8"
