--- a/kubernetes/cluster/apps/secrets/persistance.yaml
+++ b/kubernetes/cluster/apps/secrets/persistance.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: secrets-hasicorp-vault-pv
+  name: data-hashicorp-vault-0
   namespace: secrets
 spec:
   capacity:
