Adjusted node name to not contain FDQN

--- a/kubernetes/cluster/apps/secrets/persistance.yaml
+++ b/kubernetes/cluster/apps/secrets/persistance.yaml
@@ -20,4 +20,4 @@ spec:
         - key: kubernetes.io/hostname
           operator: In
           values:
-          - kube01.homeland.lan
+          - kube01
