--- a/kubernetes/cluster/apps/vpn-gateway/helm-release.yaml
+++ b/kubernetes/cluster/apps/vpn-gateway/helm-release.yaml
@@ -41,7 +41,7 @@ spec:
       NOT_ROUTED_TO_GATEWAY_CIDRS: "10.0.0.0/8 192.168.0.0/16"
       VPN_LOCAL_CIDRS: "192.168.0.0/16 172.16.0.0/24 10.0.0.0/8"
     routed_namespaces:
-      - vpn
+      - downloads
     addons:
       vpn:
         enabled: true
