Added publicPorts through vpn-gateway

--- a/kubernetes/cluster/apps/downloads/jackett/helm-release.yaml
+++ b/kubernetes/cluster/apps/downloads/jackett/helm-release.yaml
@@ -29,6 +29,7 @@ spec:
       tag: v0.20.53
     env:
       TZ: America/Toronto
+    hostname: jackett
     service:
       main:
         enabled: true
