--- a/kubernetes/cluster/apps/downloads/qbittorrent/helm-release.yaml
+++ b/kubernetes/cluster/apps/downloads/qbittorrent/helm-release.yaml
@@ -31,6 +31,7 @@ spec:
       automaticPortSetup: true
     env:
       TZ: America/Toronto
+    hostname: qbittorrent
     service:
       main:
         enabled: true
