--- a/kubernetes/cluster/apps/downloads/prowlarr/helm-release.yaml
+++ b/kubernetes/cluster/apps/downloads/prowlarr/helm-release.yaml
@@ -2,7 +2,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: jackett
+  name: prowlarr
   namespace: downloads
 spec:
   interval: 5m
@@ -11,8 +11,8 @@ spec:
   chart:
     spec:
       # renovate: registryUrl=https://k8s-at-home.com/charts/
-      chart: jackett
-      version: 11.2.0
+      chart: prowlarr
+      version: 4.1.0
       sourceRef:
         kind: HelmRepository
         name: k8s-at-home
@@ -21,26 +21,24 @@ spec:
   values:
     serviceAccount:
       create: true
-      name: jackett-app
+      name: prowlarr-app
     podAnnotations:
       setGateway: "true"
     image:
-      repository: ghcr.io/k8s-at-home/jackett
-      tag: v0.20.53
+      repository: ghcr.io/k8s-at-home/prowlarr
+      tag: v0.1.8.1265
     env:
       TZ: America/Toronto
-    hostname: jackett
+    hostname: prowlarr
     service:
       main:
         enabled: true
         ports:
           http:
-            port: 9117
+            port: 9696
     persistence:
       config:
         enabled: true
         type: hostPath
-        hostPath: /var/local/kubernetes/media/jackett/config
+        hostPath: /var/local/kubernetes/media/prowlarr/config
         mountPath: /config
-      torrentblackhole:
-        enabled: false
