Added missing volume mounts

--- a/kubernetes/cluster/apps/downloads/qbittorrent/helm-release.yaml
+++ b/kubernetes/cluster/apps/downloads/qbittorrent/helm-release.yaml
@@ -57,7 +57,7 @@ spec:
         enabled: true
         type: hostPath
         hostPath: /mnt/mammoth/complete
-        mountPath: /media
+        mountPath: /complete
       downloads:
         enabled: true
         type: hostPath
