--- a/kubernetes/cluster/apps/media-management/sonarr/helm-release.yaml
+++ b/kubernetes/cluster/apps/media-management/sonarr/helm-release.yaml
@@ -44,3 +44,8 @@ spec:
         type: hostPath
         hostPath: /mnt/mammoth/tv
         mountPath: /media
+      downloads:
+        enabled: true
+        type: hostPath
+        hostPath: /mnt/mammoth/complete
+        mountPath: /complete
