--- a/kubernetes/cluster/apps/admin/traefik/helm-release.yaml
+++ b/kubernetes/cluster/apps/admin/traefik/helm-release.yaml
@@ -15,7 +15,7 @@ spec:
       version: 10.9.0
       sourceRef:
         kind: HelmRepository
-        name: traefik
+        name: traefik-helm
         namespace: flux-system
       interval: 5m
   values:
@@ -23,7 +23,7 @@ spec:
       name: traefik-app
     image:
       name: traefik
-      tag: v2.5.4
+      tag: v2.5.5
     ingressRoute:
       dashboard:
         enabled: true
