Fixed pod annotations

--- a/kubernetes/cluster/apps/admin/traefik/helm-release.yaml
+++ b/kubernetes/cluster/apps/admin/traefik/helm-release.yaml
@@ -19,14 +19,15 @@ spec:
         namespace: flux-system
       interval: 5m
   values:
-    podAnnotations:
-      vault.hashicorp.com/agent-inject: 'true'
-      vault.hashicorp.com/role: 'traefik-app'
-      vault.hashicorp.com/agent-inject-secret-traefik.yaml: 'homelab/traefik/config'
-      vault.hashicorp.com/agent-inject-template-traefik.yaml: |
-        {{- with secret "homelab/traefik/config" -}}
-        {{ .Data.data.config }}
-        {{- end -}}
+    deployment:
+      podAnnotations:
+        vault.hashicorp.com/agent-inject: 'true'
+        vault.hashicorp.com/role: 'traefik-app'
+        vault.hashicorp.com/agent-inject-secret-traefik.yaml: 'homelab/traefik/config'
+        vault.hashicorp.com/agent-inject-template-traefik.yaml: |
+          {{- with secret "homelab/traefik/config" -}}
+          {{ .Data.data.config }}
+          {{- end -}}
     serviceAccount:
       name: traefik-app
     image:
