--- a/kubernetes/cluster/apps/admin/traefik/helm-release.yaml
+++ b/kubernetes/cluster/apps/admin/traefik/helm-release.yaml
@@ -24,9 +24,9 @@ spec:
         vault.hashicorp.com/agent-inject: 'true',
         vault.hashicorp.com/role: 'traefik-app',
         vault.hashicorp.com/agent-inject-secret-traefik.yaml: 'homelab/traefik/config',
-        vault.hashicorp.com/agent-inject-template-traefik.yaml: {{- with secret "homelab/traefik/config" -}}
+        vault.hashicorp.com/agent-inject-template-traefik.yaml: '{{- with secret "homelab/traefik/config" -}}
           {{ .Data.data.config }}
-          {{- end -}}
+          {{- end -}}'
       }
     serviceAccount:
       name: traefik-app
