Added ingress for other services, sonarr no service

--- a/kubernetes/cluster/apps/downloads/prowlarr/helm-release.yaml
+++ b/kubernetes/cluster/apps/downloads/prowlarr/helm-release.yaml
@@ -30,6 +30,14 @@ spec:
     env:
       TZ: America/Toronto
     hostname: prowlarr
+    ingress:
+      main:
+        enabled: true
+        hosts:
+          - host: "prowlarr.homeland.farm"
+            paths:
+              - path: /
+                pathType: Prefix
     service:
       main:
         enabled: true
