--- a/kubernetes/cluster/apps/smart-home/hass/helm-release.yaml
+++ b/kubernetes/cluster/apps/smart-home/hass/helm-release.yaml
@@ -22,6 +22,7 @@ spec:
     deployment:
     serviceAccount:
       name: hass-app
+      create: true
     image:
       name: homeassistant/home-assistant
       tag: 2021.12
