--- a/kubernetes/cluster/apps/smart-home/hass/helm-release.yaml
+++ b/kubernetes/cluster/apps/smart-home/hass/helm-release.yaml
@@ -25,7 +25,7 @@ spec:
       create: true
     image:
       name: homeassistant/home-assistant
-      tag: 2021.12
+      tag: "2021.12"
     env:
       TZ: America/Toronto
     ingress:
