--- a/kubernetes/kubeadm/kubeadm-config.yaml
+++ b/kubernetes/kubeadm/kubeadm-config.yaml
@@ -8,3 +8,9 @@ networking:
 kind: KubeletConfiguration
 apiVersion: kubelet.config.k8s.io/v1beta1
 cgroupDriver: systemd
+---
+apiVersion: kubeproxy.config.k8s.io/v1alpha1
+kind: KubeProxyConfiguration
+mode: "ipvs"
+ipvs:
+  strictARP: true
