--- a/kubernetes/cluster/apps/crypto/chia/helm-release.yaml
+++ b/kubernetes/cluster/apps/crypto/chia/helm-release.yaml
@@ -38,7 +38,7 @@ spec:
       keys: /vault/secrets/key.txt
     service:
       main:
-        type: LoadBancer
+        type: LoadBalncer
     persistence:
       key:
         enabled: false
