--- a/kubernetes/cluster/apps/admin/traefik/helm-release.yaml
+++ b/kubernetes/cluster/apps/admin/traefik/helm-release.yaml
@@ -45,8 +45,9 @@ spec:
           options: "default"
     service:
       annotations:
-        annotations:
+        annotations: {
           metallb.universe.tf/allow-shared-ip: 'node01-sharing'
+        }
     additionalArguments:
       - "--providers.file.filename=/vault/secrets/dynamic.yml"
       - "--providers.file.watch=true"
