--- a/kubernetes/cluster/apps/crypto/chia/helm-release.yaml
+++ b/kubernetes/cluster/apps/crypto/chia/helm-release.yaml
@@ -53,4 +53,4 @@ spec:
         enabled: true
         type: hostPath
         hostPath: /mnt/mammoth/chia-plots
-        mounthPath: /plots
+        mountPath: /plots
