--- a/kubernetes/cluster/apps/secrets/external-secrets/cloudflare-api-secret.yaml
+++ b/kubernetes/cluster/apps/secrets/external-secrets/cloudflare-api-secret.yaml
@@ -3,6 +3,7 @@ apiVersion: 'kubernetes-client.io/v1'
 kind: ExternalSecret
 metadata:
   name: cloudlare-api-secret
+  namespace: secrets
 spec:
   backendType: vault
   vaultMountPoint: kubernetes
