--- a/kubernetes/cluster/apps/secrets/external-secrets/helm-release.yaml
+++ b/kubernetes/cluster/apps/secrets/external-secrets/helm-release.yaml
@@ -3,7 +3,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: external-secrets
-  namespace: cert-manager
+  namespace: secrets
 spec:
   interval: 5m
   chart:
