--- a/kubernetes/cluster/apps/secrets/vault/kustomization.yaml
+++ b/kubernetes/cluster/apps/secrets/vault/kustomization.yaml
@@ -2,6 +2,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - namespace.yaml
-  - external-secrets
-  - vault
+  - persistance.yaml
+  - helm-release.yaml
+  - auth-delegator.yaml
