Added vault addr

--- a/kubernetes/cluster/apps/secrets/external-secrets/helm-release.yaml
+++ b/kubernetes/cluster/apps/secrets/external-secrets/helm-release.yaml
@@ -23,3 +23,5 @@ spec:
     image:
       repository: ghcr.io/external-secrets/kubernetes-external-secrets
       tag: 8.5.0
+    env:
+      VAULT_ADDR: "http://hashicorp-vault.secrets.svc.cluster.local:8200"
