Moved external secret

--- a/kubernetes/cluster/apps/cert-manager/cert-manager/cloudflare-api-secret.yaml
+++ b/kubernetes/cluster/apps/cert-manager/cert-manager/cloudflare-api-secret.yaml
@@ -3,7 +3,7 @@ apiVersion: 'kubernetes-client.io/v1'
 kind: ExternalSecret
 metadata:
   name: cloudlare-api-secret
-  namespace: secrets
+  namespace: cert-manager
 spec:
   backendType: vault
   vaultMountPoint: kubernetes
