--- a/kubernetes/cluster/apps/admin/traefik/tls-store.yaml
+++ b/kubernetes/cluster/apps/admin/traefik/tls-store.yaml
@@ -2,7 +2,7 @@
 apiVersion: traefik.containo.us/v1alpha1
 kind: TLSStore
 metadata:
-  name: homelandfarm
+  name: default
   namespace: admin
 spec:
   defaultCertificate:
