--- a/kubernetes/cluster/apps/homerow/database/helm-release.yaml
+++ b/kubernetes/cluster/apps/homerow/database/helm-release.yaml
@@ -27,8 +27,8 @@ spec:
     primary:
       podAnnotations: {
         vault.hashicorp.com/agent-inject: 'true',
-        vault.hashicorp.com/role: 'web',
-        vault.hashicorp.com/agent-inject-secret-config: 'secret/data/web',
+        vault.hashicorp.com/role: 'homerow-mysql-app',
+        vault.hashicorp.com/agent-inject-secret-config: 'homelab/homerow/database/config',
         vault.hashicorp.com/agent-inject-template-config: '{{- with secret "homelab/homerow/database/config" -}}
           export ALLOW_EMPTY_PASSWORD="{{ .Data.data.ALLOW_EMPTY_PASSWORD }}"
           export MYSQL_DATABASE="{{ .Data.data.MYSQL_DATABASE }}"
