Changed pvc name

--- a/kubernetes/cluster/apps/homerow/database/persistance.yaml
+++ b/kubernetes/cluster/apps/homerow/database/persistance.yaml
@@ -28,7 +28,7 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: data-mysql-pvc
+  name: data-mysql-0
   namespace: homerow
 spec:
   storageClassName: ""
