--- a/kubernetes/cluster/apps/homerow/database/helm-release.yaml
+++ b/kubernetes/cluster/apps/homerow/database/helm-release.yaml
@@ -19,6 +19,8 @@ spec:
         namespace: flux-system
       interval: 5m
   values:
+    auth:
+      rootPassword: "temp"
     serviceAccount:
       name: "homerow-mysql-app"
     image:
