--- a/kubernetes/cluster/apps/homerow/database/helm-release.yaml
+++ b/kubernetes/cluster/apps/homerow/database/helm-release.yaml
@@ -24,3 +24,10 @@ spec:
     image:
       repository: bitnami/mysql
       tag: 8.0.27-debian-10-r78
+    primary:
+      livenessProbe:
+        enabled: false
+      readinessProve:
+        enabled: false
+      startupProbe:
+        enabled: false
