Added service type

--- a/kubernetes/cluster/apps/homerow/wordpress/helm-release.yaml
+++ b/kubernetes/cluster/apps/homerow/wordpress/helm-release.yaml
@@ -27,6 +27,8 @@ spec:
     ingress:
       enabled: true
       hostname: staging.homerow.ca
+    service:
+      type: ClusterIP
     persistence:
       existingClaim: wordpress-staging-pvc
     mariadb:
