--- a/kubernetes/cluster/apps/homerow/database/helm-release.yaml
+++ b/kubernetes/cluster/apps/homerow/database/helm-release.yaml
@@ -21,6 +21,14 @@ spec:
   values:
     serviceAccount:
       name: "homerow-mysql-app"
+    auth:
+      rootPassword: ${mysql_root_password}
+      database: ${mysql_database}
+      username: ${mysql_user}
+      password: ${mysql_password}
     image:
       repository: bitnami/mysql
       tag: 8.0.27-debian-10-r78
+    primary:
+      persistence:
+        exisingClaim: data-mysql-0
