--- a/kubernetes/cluster/apps/secrets/homerow-secrets.sops.yaml
+++ b/kubernetes/cluster/apps/secrets/homerow-secrets.sops.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 metadata:
     name: homerow-secrets
-    namespace: homerow
+    namespace: flux-system
 stringData:
     mysql_database: ENC[AES256_GCM,data:cncbG3aReIOMwfmWgmsc,iv:Jte9IEH2tsHUz/hogrPz5z6t4IWTw3PQdhfF8vBXqgs=,tag:PulULT325Tjur5thakpQVQ==,type:str]
     mysql_password: ENC[AES256_GCM,data:j+KI3bBVqv5UOeFox4/AzeRsEJ6ZllLys+0j6donjbs=,iv:dtrO0NYgiW5+odDrmisuIFowgHO1nx7qli/1rZ0lp6s=,tag:26jPImma+WXxmkeHViq6sA==,type:str]
