--- a/kubernetes/cluster/apps/homerow/nopcommerce/helm-release.yaml
+++ b/kubernetes/cluster/apps/homerow/nopcommerce/helm-release.yaml
@@ -29,6 +29,9 @@ spec:
             paths:
               - path: /
                 pathType: Prefix
+    service:
+      main:
+        enabled: true
     persistence:
       config:
         enabled: false
